--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,32 +1,38 @@
 .variables
-	.bottom-actions
+	.variables-actions
+		float: right
+
 		button, span, input
 			margin-left: 10px
 			float: right
+			margin-bottom: 5px
+
+	.alert
+		float: left
+		width: 75%
 	
-	th
+	th, td
 		&.variable
-			width: 200px
+			width: 30%
 		&.actions
-			width: 100px
+			width: 30px
 
 	tr button
 		margin: 0px
+		padding-top: 3px
 
 	tr input
 		width: 100%
 		height: 26px
-		padding: 0
-		margin: 1px
-		line-height: 20px
+		padding: 3px 6px
+		margin: 1px 1px 0 1px
+		line-height: 19px
+		border: 1px solid #ddd
 
 	td button
 		margin-top: 2px
 
 	.variable-table
 		td
-			padding: 16px
-			padding-left: 14px
+			padding: 16px 16px 16px 18px
 
-	.variable-table-actions
-		margin-top: 73px
