--- a/static/style.css
+++ b/static/style.css
@@ -9,11 +9,12 @@
   float: left;
   width: 75%; }
 
-.variables th.variable, .variables td.variable {
-  width: 30%; }
-
-.variables th.actions, .variables td.actions {
-  width: 30px; }
+.variables th, .variables td {
+  border-bottom: 1px solid #f0f0f0; }
+  .variables th.variable, .variables td.variable {
+    width: 30%; }
+  .variables th.actions, .variables td.actions {
+    width: 30px; }
 
 .variables tr button {
   margin: 0px;
