--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,3 +1,6 @@
+.variables-description p
+	max-width: 500px
+
 .variables
 	.variables-actions
 		float: right
@@ -10,7 +13,7 @@
 	.alert
 		float: left
 		width: 75%
-	
+
 	th, td
 		&.variable
 			width: 30%
